--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   spider: ^4.2.2
   flutter_secure_storage: ^9.0.0
+  json_annotation: ^4.8.1
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
