--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,18 +37,13 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
+  youtube_player_flutter: ^9.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
