--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   youtube_player_flutter: ^9.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
